more cleanup and stuff :D

--- a/automation/settings.cfg
+++ b/automation/settings.cfg
@@ -12,7 +12,7 @@ IGNORE_JAVA_CHECK=0;
 USE_SPONGE=0;
 HIGH_CPU_PRIORITY=0;
 
-MODPACK_NAME=Enigmatica 6;
+MODPACK_NAME=Enigmatica 6 Expert;
 MCVER=1.16.5;
 FORGEVER=36.1.13;
 FORGEURL=https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.16.5-36.1.13/forge-1.16.5-36.1.13-installer.jar;
